# umbu

./: .gitignore  companies.yaml  constants.py  main.py  pyproject.toml  todo.txt  transcription.json
appearance/animations/: __init__.py  default.py
appearance/styles/: __init__.py  default.py  static.py
cli/: produce.py
core/canva/: canva.py  layer.py
core/engine/: engine.py  render.py
core/engine/appearance/: __init__.py
core/models/: layout.py  text.py  transcription.py
core/ui/: layout.py  text.py
core/ui/style/: mortgage.py
example/: example.py
ui/: layout.py  text.py
ui/style/: base.py  mortgage.py
umbu/: constants.py
umbu/appearance/animations/: __init__.py  classic.py  default.py  fancy.py  minimalist.py  modern.py  static.py
umbu/appearance/styles/: __init__.py  default.py  fancy.py  modern.py  static.py
umbu/components/: __init__.py  base.py  layout_interface.py  root.py  row.py  text.py
umbu/core/: engine.py  transcriber.py  umbu.py
umbu/core/canva/: canva.py  layer.py
umbu/core/engine/: engine.py
umbu/core/models/: company.py  layout.py
umbu/core/ui/: __init__.py  text.py
umbu/core/video/: video.py
umbu/models/: layout.py  transcription.py
umbu/render/: measurer_interface.py  render_interface.py
umbu/render/cairo/: __init__.py  font.py  layer.py  render.py
umbu/theme/animation/: __init__.py  interface.py
umbu/theme/style/: __init__.py  base.py  bounce.py  interface.py  minimal.py  minimal_white.py  minimal_yellow.py  minimalist.py  scale.py
umbu/to_delete/: text.py
umbu/to_delete/styles/: classic.py  (+1 more)
(+3 files in other folders)
