[project]
name = "umbu"
version = "0.0.1"
description = "Open-source tool to automatically generate captions for your videos"
authors = [
    {name = "James Yan"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []
package-mode = true
packages = [
    { include = "umbu", from = "umbu" }
]


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
