[project]
name = "umbu"
version = "0.1.5"
description = "Open-source tool to automatically generate captions for your videos"
authors = [
    {name = "James Yan"}
]
license = {text = "MIT"}
requires-python = "^3.11"
dependencies = ["pycairo (>=1.28.0,<2.0.0)", "pydantic (>=2.11.7,<3.0.0)", "numpy (>=2.3.1,<3.0.0)", "pygobject (==3.50.0)", "ffmpeg-python (>=0.2.0,<0.3.0)", "objgraph (>=3.6.2,<4.0.0)", "memory-profiler (>=0.61.0,<0.62.0)"]
package-mode = true
packages = [
    { include = "umbu", from = "umbu" }
]


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
